Enhance VM functionality with ACPI support and disk image handling
- Integrated zlib for qcow2 compressed cluster support in CMake.
- Updated CMakeLists.txt to include zlib and new source files for virtio devices.
- Added support for virtio block devices and disk image management, including raw and qcow2 formats.
- Implemented ACPI power management and device discovery in the ACPI subsystem.
- Enhanced initramfs creation script to include virtio kernel modules.
- Updated root filesystem creation script to support additional packages and caching.
- Modified main application to accept disk image paths as command-line arguments.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,16 @@ project(TenClaw LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# zlib — required for qcow2 compressed cluster support
+include(FetchContent)
+FetchContent_Declare(
+    zlib
+    GIT_REPOSITORY https://github.com/madler/zlib.git
+    GIT_TAG        v1.3.1
+)
+set(ZLIB_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(zlib)
+
 set(SOURCES
     src/main.cpp
     src/vmm/vm.cpp
@@ -17,9 +27,17 @@ set(SOURCES
     src/device/rtc/cmos_rtc.cpp
     src/device/irq/ioapic.cpp
     src/arch/x86_64/acpi.cpp
+    src/device/acpi/acpi_pm.cpp
+    src/device/virtio/virtqueue.cpp
+    src/device/virtio/virtio_mmio.cpp
+    src/device/virtio/virtio_blk.cpp
+    src/device/virtio/disk_image.cpp
+    src/device/virtio/raw_image.cpp
+    src/device/virtio/qcow2.cpp
 )
 
 add_executable(TenClaw ${SOURCES})
 target_include_directories(TenClaw PRIVATE src/)
 
-target_link_libraries(TenClaw PRIVATE WinHvPlatform WinHvEmulation)
+target_include_directories(TenClaw PRIVATE ${zlib_SOURCE_DIR} ${zlib_BINARY_DIR})
+target_link_libraries(TenClaw PRIVATE WinHvPlatform WinHvEmulation zlibstatic)
