Implement virtio-net support with NAT networking and lwIP integration
- Added lwIP as a lightweight TCP/IP stack for NAT networking in CMake.
- Introduced virtio-net device implementation for network communication.
- Enhanced main application to support network options, including NAT and port forwarding.
- Updated initramfs and root filesystem scripts to include necessary networking modules.
- Modified VM configuration to enable virtio-net and handle network settings.
- Implemented network backend for managing NAT and DHCP functionalities.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,9 @@ project(TenClaw LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# zlib — required for qcow2 compressed cluster support
 include(FetchContent)
+
+# zlib — required for qcow2 compressed cluster support
 FetchContent_Declare(
     zlib
     GIT_REPOSITORY https://github.com/madler/zlib.git
@@ -13,6 +14,33 @@ FetchContent_Declare(
 )
 set(ZLIB_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(zlib)
+
+# lwIP — lightweight TCP/IP stack for NAT networking
+FetchContent_Declare(
+    lwip
+    GIT_REPOSITORY https://github.com/lwip-tcpip/lwip.git
+    GIT_TAG        STABLE-2_2_0_RELEASE
+)
+FetchContent_GetProperties(lwip)
+if(NOT lwip_POPULATED)
+    FetchContent_Populate(lwip)
+endif()
+
+set(LWIP_DIR ${lwip_SOURCE_DIR})
+set(LWIP_INCLUDE_DIRS
+    ${LWIP_DIR}/src/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/net
+)
+set(LWIP_COMPILER_FLAGS "")
+set(LWIP_DEFINITIONS "")
+set(LWIP_MBEDTLS_DEFINITIONS "")
+set(LWIP_MBEDTLS_INCLUDE_DIRS "")
+set(LWIP_EXCLUDE_SLIPIF TRUE)
+include(${LWIP_DIR}/src/Filelists.cmake)
+
+if(MSVC)
+    target_compile_options(lwipcore PRIVATE /W0)
+endif()
 
 set(SOURCES
     src/main.cpp
@@ -34,10 +62,13 @@ set(SOURCES
     src/device/virtio/disk_image.cpp
     src/device/virtio/raw_image.cpp
     src/device/virtio/qcow2.cpp
+    src/device/virtio/virtio_net.cpp
+    src/net/net_backend.cpp
 )
 
 add_executable(TenClaw ${SOURCES})
 target_include_directories(TenClaw PRIVATE src/)
 
 target_include_directories(TenClaw PRIVATE ${zlib_SOURCE_DIR} ${zlib_BINARY_DIR})
-target_link_libraries(TenClaw PRIVATE WinHvPlatform WinHvEmulation zlibstatic)
+target_include_directories(TenClaw PRIVATE ${LWIP_INCLUDE_DIRS})
+target_link_libraries(TenClaw PRIVATE WinHvPlatform WinHvEmulation zlibstatic lwipcore ws2_32)
