Implement virtio input and GPU device support in VM
- Added VirtioInputDevice for keyboard and tablet input handling, including event injection and configuration management.
- Introduced VirtioGpuDevice for 2D graphics support, enabling display frame submission and GPU resource management.
- Updated VM class to initialize and manage virtio input and GPU devices, including memory mapping and IRQ handling.
- Enhanced the VM configuration to support display width and height settings, integrating input and display ports for improved interaction.
- Implemented HID input thread for polling keyboard and pointer events, ensuring seamless input handling within the VM environment.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -18,6 +18,8 @@ set(TENBOX_CORE_SOURCES
     ${CMAKE_SOURCE_DIR}/src/core/device/virtio/raw_image.cpp
     ${CMAKE_SOURCE_DIR}/src/core/device/virtio/qcow2.cpp
     ${CMAKE_SOURCE_DIR}/src/core/device/virtio/virtio_net.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/device/virtio/virtio_input.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/device/virtio/virtio_gpu.cpp
     ${CMAKE_SOURCE_DIR}/src/core/net/net_backend.cpp
     ${CMAKE_SOURCE_DIR}/src/platform/windows/console/std_console_port.cpp
 )
