Add zstd support for qcow2 compressed clusters and update root filesystem script
- Integrated zstd compression support in the qcow2 disk image handling, allowing for more efficient storage.
- Updated the root filesystem creation script to download and install Google Chrome, including caching mechanisms.
- Enhanced user management by creating an 'openclaw' user with sudo privileges and configuring default browser settings.
- Modified package mirror URLs for Debian to improve accessibility and reliability.
- Improved handling of display settings and user autologin configurations in the system setup.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -33,10 +33,12 @@ target_include_directories(tenbox_core
         ${CMAKE_BINARY_DIR}
         ${zlib_SOURCE_DIR}
         ${zlib_BINARY_DIR}
+        ${zstd_SOURCE_DIR}/lib
         ${LWIP_INCLUDE_DIRS}
 )
 target_link_libraries(tenbox_core
     PUBLIC
         zlibstatic
+        libzstd_static
         lwipcore
 )
