Enhance shared folder management and integrate VirtIO FS support
- Added VirtIO FS device for dynamic management of shared folders between host and guest.
- Implemented functionality to add, remove, and list shared folders in the VM configuration.
- Updated VM class to initialize VirtIO FS with initial shared folders and handle runtime updates.
- Enhanced ManagerService to manage shared folder IPC messages and ensure seamless integration with the VM lifecycle.
- Improved root filesystem scripts to support new shared folder features and configurations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,12 @@ endif()
 
 include(FetchContent)
 
+# Use a persistent cache directory for FetchContent downloads
+# This avoids re-downloading dependencies when build directory is deleted
+if(NOT DEFINED FETCHCONTENT_BASE_DIR)
+    set(FETCHCONTENT_BASE_DIR "${CMAKE_SOURCE_DIR}/.deps" CACHE PATH "FetchContent cache directory")
+endif()
+
 # zlib — required for qcow2 compressed cluster support
 FetchContent_Declare(
     zlib
