--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,3 +88,4 @@ add_subdirectory(src/ipc)
 add_subdirectory(src/ui/win32)
 add_subdirectory(src/runtime)
 add_subdirectory(src/manager)
+add_subdirectory(tests)
