--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -22,6 +22,7 @@ set(TENBOX_CORE_SOURCES
     ${CMAKE_SOURCE_DIR}/src/core/device/virtio/virtio_gpu.cpp
     ${CMAKE_SOURCE_DIR}/src/core/device/virtio/virtio_serial.cpp
     ${CMAKE_SOURCE_DIR}/src/core/device/virtio/virtio_fs.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/device/virtio/virtio_snd.cpp
     ${CMAKE_SOURCE_DIR}/src/core/vdagent/vdagent_handler.cpp
     ${CMAKE_SOURCE_DIR}/src/core/guest_agent/guest_agent_handler.cpp
     ${CMAKE_SOURCE_DIR}/src/core/net/net_backend.cpp
