--- a/src/ui/win32/CMakeLists.txt
+++ b/src/ui/win32/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(tenbox_ui_shell_win32 STATIC
     ${CMAKE_SOURCE_DIR}/src/ui/win32/components/shared_folders_tab.cpp
     ${CMAKE_SOURCE_DIR}/src/ui/common/vm_forms.cpp
     ${CMAKE_SOURCE_DIR}/src/ui/common/i18n.cpp
+    ${CMAKE_SOURCE_DIR}/src/platform/windows/audio/wasapi_audio_player.cpp
 )
 
 target_include_directories(tenbox_ui_shell_win32
@@ -15,4 +16,4 @@ target_include_directories(tenbox_ui_shell_win32
         ${CMAKE_SOURCE_DIR}/src
 )
 
-target_link_libraries(tenbox_ui_shell_win32 PUBLIC comctl32 uxtheme)
+target_link_libraries(tenbox_ui_shell_win32 PUBLIC comctl32 uxtheme ole32)
