Add Shared Folders Management in UI and Resources
- Introduced a new "Shared Folders" feature in the UI, allowing users to manage shared folders for VMs.
- Updated resource files to include a new bitmap for shared folders and added corresponding toolbar commands.
- Enhanced internationalization support by adding new strings for shared folder management in English and Chinese.
- Integrated shared folders functionality into the main application flow, including dialog management for adding and removing shared folders.
- Updated CMake configuration to include new resource files and ensure proper build integration.

--- a/src/runtime/CMakeLists.txt
+++ b/src/runtime/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(tenbox-vm-runtime
     ${CMAKE_SOURCE_DIR}/src/runtime/main.cpp
     ${CMAKE_SOURCE_DIR}/src/runtime/runtime_service.cpp
+    ${CMAKE_SOURCE_DIR}/src/runtime/runtime.rc
 )
 
 target_include_directories(tenbox-vm-runtime
