Enhance VM Creation and Runtime Management
- Updated the VM creation process to allow custom storage directories via the VmCreateRequest structure.
- Improved error handling in the VM startup process, providing clearer error messages when IPC connections fail.
- Added a new application manifest to set the active code page to UTF-8 for better Unicode support in the runtime.
- Integrated browse buttons in the VM creation dialog for easier file and folder selection, enhancing user experience.
- Updated internationalization strings to include new entries for the browse buttons in the UI.

--- a/src/runtime/CMakeLists.txt
+++ b/src/runtime/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(tenbox-vm-runtime
     ${CMAKE_SOURCE_DIR}/src/runtime/main.cpp
     ${CMAKE_SOURCE_DIR}/src/runtime/runtime_service.cpp
     ${CMAKE_SOURCE_DIR}/src/runtime/runtime.rc
+    ${CMAKE_SOURCE_DIR}/src/runtime/app.manifest
 )
 
 target_include_directories(tenbox-vm-runtime
